# Differentiator

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
Examples/: expr.txt  graph.gv  main.cpp  mark.cpp
Examples/files/: conclusion.txt  docStart.txt  fullDerivative.txt  fullDerivativeResult.txt  fullDerivativeSimplify.txt  intro.txt  primaryDiff.txt  primaryDiffEnd.txt  primarySimplify.txt  primarySimplifyEnd.txt  secondSimplify.txt  secondSimplifyEnd.txt
Examples/output/: graph.gv
src/: BinaryTree.h  ExprNode.h  InfixParser.h  Stack.h
src/Derivation/: DerivationDSL.h  DerivationDSLUndef.h  DerivativeRule.h  Differentiator.h
src/Evaluation/: Evaluator.h  EvaluatorRes.h
src/Helpers/: BinaryTree.h  InfixParser.h  Stack.h
src/LaTEX/: LaTEXDumper.h  LaTEXPhrases.h
src/Optimization/: ExprOptimizer.h  OptimiserDSL.h  SpecificOptimizers.h
src/Syntax/: Syntax.h
